[package]
name = "ollama-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7"
hyper = {version = "1.3", features = ["full"]}
hyper-util = {version = "0.1", features = ["client-legacy"]}
tokio = {version = "1", features=["full"]}
